--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-"Hello World" 
+---
+layout: default
+title: Burke 空间
+---
+
+<h2>日志列表
+<ul>
+	{% for post in site.posts %}
+		<li>{{ post.date | date_to_string }} <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></li>
+	{% endfor %}
+</ul>
